Fixed transbox ratio on mobiles

--- a/assets/css/calculator.css
+++ b/assets/css/calculator.css
@@ -1,7 +1,9 @@
 body, html {
     height: 100%;
+    width: 100%;
     margin: 0;
     min-height: 1000px;
+    min-width: 450px;
     background-image: url("https://cdn.pixabay.com/photo/2015/12/01/15/43/black-1072366_960_720.jpg");
     background-attachment: fixed;
     background-repeat: no-repeat;
